--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
         <link rel="stylesheet" href="./asset/css/style.css"/>
     </head>
     <body>
-        <h1>Birds that appear in both The Netherlands and Taiwan, and whether I've seen them.</h1>
-        <p class="intro">Names are in this order: Dutch, Traditional Chinese, English, scientific.</p>
-        <button>GitHub repository</button> <button>Write up</button>
-
-        <div id="bird-list" class="bird-list">
-
-
+        <div class="intro">
+            <h1>Birds that appear in both The Netherlands and Taiwan, whether I've seen them, and where.</h1>
+            <p class="intro">Most pictures are provided via the Flickr API, with some manual selection done by me.</p>
+            <button>GitHub repository</button> <button>Write up</button>
         </div>
+
+
+        <div id="bird-list" class="bird-list"></div>
+        
     </body>
 </html>
