added repo link

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
         <div class="intro">
             <h1>Birds that appear in both The Netherlands and Taiwan, whether I've seen them, and where.</h1>
             <p class="intro">Most pictures are provided via the Flickr API, with some manual selection done by me.</p>
-            <button>GitHub repository</button> <button>Write up</button>
+
+            <a class="introLink" href="https://github.com/retasu1/nl-tw-birds" target="_blank">Look at the code</a>
+            <a class="introLink" href="" target="_blank">Write up</a>
         </div>
 
-
+        
         <div id="bird-list" class="bird-list"></div>
         
     </body>
