--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="intro">
-            <h1>Birds that appear in both The Netherlands and Taiwan, whether I've seen them, and where (🇳🇱 here, 🇹🇼 there, or 🗺️ elsewhere).</h1>
+            <h1>Birds that appear in both The Netherlands and Taiwan, whether I've seen/heard them, and where (🇳🇱 here, 🇹🇼 there, or 🗺️ elsewhere).</h1>
             <p class="intro">List of birds is compiled from <a href="https://www.dutchavifauna.nl/page/1208/lijst_van_nederlandse_vogelsoorten" target="_blank">this list from the Dutch Birding Association</a> and the <a href="https://www.bird.org.tw/basicpage/87" target="_blank">2023 list from the Taiwan Wild Bird Federation</a>. Most pictures are provided via the Flickr API, with some manual selection done by me.</p>
 
             <a class="introLink" href="https://github.com/retasu1/nl-tw-birds" target="_blank">Look at the code</a>
